--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="https://www.github.com/rankdjr" class="no-scroll"><i class="fa fa-github" aria-hidden="true"></i>  GitHub</a>
             </li>
             <li>
-                <a href="www.linkedin.com/in/drank-3b539610b" class="no-scroll">  Linked <i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/drank-3b539610b" class="no-scroll">  Linked <i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </li>
         </ul>
     </header>
