--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="lead-content">
             <h1>Douglas Rank</h1>
             <h2>Computer Science Undergraduate</h2>
-            <a href="files/DouglasRank_Resume.pdf" download="Douglas_Rank_Resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="files/DouglasRank_Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
