added work history and orcswarm project

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <a href="#education">Education</a>
             </li>
             <li>
+                <a href="#experience">Experience</a>
+            </li>
+            <li>
                 <a href="#projects">Projects</a>
             </li>
             <li>
@@ -66,17 +69,71 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>California State University, Bakersfield</h3>
-            <span class="education-date">June 2023</span>
+            <span class="education-date">May 2023</span>
             <h4>Bachelor of Science in Computer Science</h4>
         </div>
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
 
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="October 2022 – Present">
+                <h3>California Resource Corporation</h3>
+                <h4>Intern Automation Specialist</h4>
+                <!--
+                <p>
+                    Utilized PowerBI to query data, build various dashboards, and automate reports with the goal of improving our operational teams’ ability to monitor various data streams
+                    Used SQL queries to create custom views within existing data models to verify external product usage metrics to internal telemetry data sources
+                    Operated as project lead in redesigning a manual excel based report into an automated virtual form interfaced to update a dynamic list of field devices using Microsoft SQL Server Management Studio, GoCanvas, and PowerBI
+                </p>
+                -->
+            </div>
+
+            <div data-date="May 2022 – August 2022">
+                <h3>Columbia Sportswear Corporation</h3>
+                <h4>Devops Engineer Intern</h4>
+                <!--
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                </p>
+                -->
+            </div>
+            
+            <!--
+            <div data-date="September 2015 – September 2016">
+                <h3>Employer Name</h3>
+                <h4>Job Title</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                </p>
+            </div>
+            -->
+        </div>
+    </div>
+    <!-- End #experience -->
+
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/orcswarm.gif" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>“Orc Swarm”</h3>
+                        <p>
+                           Game Desgin course project featuring a classic tower-defense genre game using X11, OpenGL, and C++. 
+                        </p>
+                        <a href="https://github.com/rankdjr/towerDefense">View Project on Github</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/project1.gif" />
@@ -85,7 +142,7 @@
                     <div class="project-info">
                         <h3>“No Cutting in Line!”</h3>
                         <p>
-                           Game Desgin class project featuring a simple line intersection game using OpenGL and C++. 
+                           Game Desgin course project featuring a simple line intersection game using OpenGL and C++. 
                         </p>
                         <a href="https://github.com/rankdjr/LineIntersection">View Project on Github</a>
                     </div>
@@ -101,7 +158,7 @@
                     <div class="project-info">
                         <h3>RoadRunner Casino</h3>
                         <p>
-                            Software Engineering class project featuring a Blackjack application using Java, Android Studio and Git.
+                            Software Engineering course project featuring a Blackjack application using Java, Android Studio and Git.
                         </p>
                         <a href="https://github.com/rankdjr/RRCasino">View Project on Github</a>
                     </div>
