updated links to open in new tab

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <a href="#skills">Skills</a>
             </li>
             <li>
-                <a href="https://www.github.com/rankdjr" class="no-scroll"><i class="fa fa-github" aria-hidden="true"></i>  GitHub</a>
+                <a href="https://www.github.com/rankdjr" class="no-scroll" target="_blank" rel="noopener noreferrer"><i class="fa fa-github" aria-hidden="true"></i>  GitHub</a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/drank-3b539610b" class="no-scroll">Linked <i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/drank-3b539610b" class="no-scroll" target="_blank" rel="noopener noreferrer">Linked <i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </li>
         </ul>
     </header>
@@ -54,7 +54,7 @@
         <div id="lead-content">
             <h1>Douglas Rank</h1>
             <h2>Computer Science Undergraduate</h2>
-            <a href="files/DouglasRank_Resume_2023.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="files/DouglasRank_Resume_2023.pdf" class="btn-rounded-white" target="_blank" rel="noopener noreferrer">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
