--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="October 2022 – Present">
-                <h3>California Resource Corporation</h3>
+                <h3>California Resources Corporation</h3>
                 <h4>Intern Automation Specialist</h4>
                 <!--
                 <p>
