--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Douglas Rank</h1>
-            <h2>Computer Science Undergraduate</h2>
+            <h2>Computer Science Graduate</h2>
             <a href="files/DouglasRank_Resume_2023.pdf" class="btn-rounded-white" target="_blank" rel="noopener noreferrer">Download Resume</a>
         </div>
         <!-- End #lead-content -->
